Fix the event to take the user input from the first to the second area and adjust the alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,10 @@ input:-webkit-autofill {
     box-shadow: 0 0 5px #1E1E1E;
 }
 
+#alignment-header-rules h2 {
+    margin: 50px 0;
+}
+
 /* Questions Interface */
 
 .questions-area {
